@@ -1,5 +1,7 @@
 [fh]
-button-tooltip=__1__\n__CONTROL_LEFT_CLICK__ to set filter or increase request.\n__CONTROL_RIGHT_CLICK__ to remove filter or decrease request.
+button-tooltip=__1__\n__2__
+tooltip-filters=__CONTROL_LEFT_CLICK__ to set filter.\n__CONTROL_RIGHT_CLICK__ to remove filter.
+tooltip-requests=__CONTROL_LEFT_CLICK__ to increase request.\n__CONTROL_RIGHT_CLICK__ to decrease request.
 filters-full=Filters full
 filters-empty=Filters empty
 requests-full=Requests full
